ReconciliationEngine adapted to Java 11