@@ -3,6 +3,7 @@ package ro.flexbiz.util.commons.reconciliation;
 import static org.assertj.core.api.Assertions.assertThatList;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -20,19 +21,19 @@ public class ReconciliationEngineTest {
 				List.of("Left only", "", "Match", "Start diff", "End diff yea", "Just a string"),
 				List.of("", "Right only", "Match", "Small diff", "End difference yea", "Another value"))
 				.stream()
-				.map(Action::result)
-				.toList();
+				.map(Action::getResult)
+				.collect(Collectors.toList());
 		
 		// expect
 		assertThatList(result.stream()
-				.map(ReconciliationResult::match)
-				.map(IdentityMatch::status)
-				.toList())
+				.map(ReconciliationResult::getMatch)
+				.map(IdentityMatch::getStatus)
+				.collect(Collectors.toList()))
 		.containsOnly(IdentityStatus.CONFIRMED);
 		
 		assertThatList(result.stream()
-				.map(ReconciliationResult::status)
-				.toList())
+				.map(ReconciliationResult::getStatus)
+				.collect(Collectors.toList()))
 		.containsExactlyInAnyOrder(ReconciliationStatus.MISMATCH, ReconciliationStatus.MISMATCH,
 				ReconciliationStatus.RECONCILED, ReconciliationStatus.PARTIALLY_RECONCILED, ReconciliationStatus.PARTIALLY_RECONCILED,
 				ReconciliationStatus.MISMATCH);
@@ -45,19 +46,19 @@ public class ReconciliationEngineTest {
 				List.of("Match", "Left only"),
 				List.of("Match"))
 				.stream()
-				.map(Action::result)
-				.toList();
+				.map(Action::getResult)
+				.collect(Collectors.toList());
 		
 		// expect
 		assertThatList(result.stream()
-				.map(ReconciliationResult::match)
-				.map(IdentityMatch::status)
-				.toList())
+				.map(ReconciliationResult::getMatch)
+				.map(IdentityMatch::getStatus)
+				.collect(Collectors.toList()))
 		.containsExactlyInAnyOrder(IdentityStatus.CONFIRMED, IdentityStatus.NOT_FOUND);
 		
 		assertThatList(result.stream()
-				.map(ReconciliationResult::status)
-				.toList())
+				.map(ReconciliationResult::getStatus)
+				.collect(Collectors.toList()))
 		.containsExactlyInAnyOrder(ReconciliationStatus.RECONCILED, ReconciliationStatus.LEFT_ONLY);
 	}
 	
@@ -68,19 +69,19 @@ public class ReconciliationEngineTest {
 				List.of("Match"),
 				List.of("Match", "Right only"))
 				.stream()
-				.map(Action::result)
-				.toList();
+				.map(Action::getResult)
+				.collect(Collectors.toList());
 		
 		// expect
 		assertThatList(result.stream()
-				.map(ReconciliationResult::match)
-				.map(IdentityMatch::status)
-				.toList())
+				.map(ReconciliationResult::getMatch)
+				.map(IdentityMatch::getStatus)
+				.collect(Collectors.toList()))
 		.containsExactlyInAnyOrder(IdentityStatus.CONFIRMED, IdentityStatus.NOT_FOUND);
 		
 		assertThatList(result.stream()
-				.map(ReconciliationResult::status)
-				.toList())
+				.map(ReconciliationResult::getStatus)
+				.collect(Collectors.toList()))
 		.containsExactlyInAnyOrder(ReconciliationStatus.RECONCILED, ReconciliationStatus.RIGHT_ONLY);
 	}
 }
